Update dependencies to resolve vulnerabilities from transitive dependencies
Motivation: Update dependencies for security purpose

--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -104,6 +104,13 @@
         <dependency>
             <groupId>com.github.erosb</groupId>
             <artifactId>everit-json-schema</artifactId>
+            <version>1.14.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-collections</groupId>
+                    <artifactId>commons-collections</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
@@ -166,6 +173,10 @@
                     <groupId>com.squareup.wire</groupId>
                     <artifactId>wire-grpc-client</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.charleskorn.kaml</groupId>
+                    <artifactId>kaml</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.api.grpc/proto-google-common-protos -->
@@ -220,6 +231,12 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
+        </dependency>
+        <!-- Temporarily adding dependency on a transitive dependency to fix security bug in underlying library. Remove when dependency is upgraded. -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
         </dependency>
     </dependencies>
     <build>
