--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
         <apicurio-registry.version>2.1.3.Final</apicurio-registry.version>
         <slf4j.version>1.7.30</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
-        <jupiter.version>5.6.2</jupiter.version>
+        <jupiter.version>5.6.3</jupiter.version>
         <mockito.version>3.3.3</mockito.version>
         <lombok.version>1.18.26</lombok.version>
         <hamcrest.version>1.1</hamcrest.version>
@@ -349,7 +349,12 @@
                 <artifactId>protobuf-java</artifactId>
                 <version>${protobuf.java.version}</version>
             </dependency>
-
+            <!-- Temporarily adding dependency on a transitive dependency to fix security bug in underlying library. Remove when dependency is upgraded. -->
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20230618</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
