--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -21,3 +21,18 @@ services:
       - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
       - ALLOW_PLAINTEXT_LISTENER=yes
+
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+    image: 'public.ecr.aws/localstack/localstack:latest'
+    ports:
+      - "127.0.0.1:4566:4566"
+    environment:
+      - SERVICES=cloudwatch, dynamodb, kinesis
+      - DEBUG=1
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      - DEFAULT_REGION=us-east-2
+      - PARITY_AWS_ACCESS_KEY_ID=1
+    volumes:
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
