Updates LZ4-Java to 1.10.2 to Address CVE-2025-66566
We pull in LZ4-Java 1.8.1 transitively through Kafka Client 3.6. This
version of lz4-java contains a vulnerability. However, lz4-java is no
longer being maintained at the Maven coordinate org.lz4:lz4-java. It has
been relocated to at.yawk.lz4:lz4-java. To address this, we have added a
shim that will shade the new coordinates so that it shows at the
original coordinates. This will allow us to update lz4-java without
needing to update our Kafka client version.

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>integration-tests</module>
         <module>jsonschema-kafkaconnect-converter</module>
         <module>protobuf-kafkaconnect-converter</module>
+        <module>lz4-shim</module>
     </modules>
 
     <properties>
@@ -118,6 +119,7 @@
         <protobuf.java.version>3.25.5</protobuf.java.version>
         <localstack.utils>0.2.23</localstack.utils>
         <aws.msk.iam.auth>2.0.3</aws.msk.iam.auth>
+        <lz4.java.version>1.10.1</lz4.java.version>
     </properties>
 
     <dependencyManagement>
@@ -376,6 +378,12 @@
                 <artifactId>json</artifactId>
                 <version>20231013</version>
             </dependency>
+            <!-- Override vulnerable lz4-java with secure shim -->
+            <dependency>
+                <groupId>org.lz4</groupId>
+                <artifactId>lz4-java</artifactId>
+                <version>${lz4.java.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -510,6 +518,8 @@
                                         <exclude>org.apache.avro</exclude>
                                         <exclude>metadata</exclude>
                                         <exclude>additionalTypes</exclude>
+                                        <!-- Exclude lz4-shim module from coverage -->
+                                        <exclude>org.lz4</exclude>
                                     </excludes>
                                 </rule>
                             </rules>
