Lz4 Dependency Upgrade (#497)
* Updates LZ4-Java to 1.10.2 to Address CVE-2025-66566

We pull in LZ4-Java 1.8.1 transitively through Kafka Client 3.6. This
version of lz4-java contains a vulnerability. However, lz4-java is no
longer being maintained at the Maven coordinate org.lz4:lz4-java. It has
been relocated to at.yawk.lz4:lz4-java. To address this, we have added a
shim that will shade the new coordinates so that it shows at the
original coordinates. This will allow us to update lz4-java without
needing to update our Kafka client version.

* Bump lz4-java to 1.10.2

* feat: update docker compose syntax and improve test reliability

- Replace deprecated docker-compose with docker compose command
- Fix partition key generation to use consistent value across records
- Add explicit producer flush for better test reliability
- Reorder lz4-shim module and clean up build dependencies
- Add default package to coverage exclusions

---------

Co-authored-by: Michael Knox <mrknox@amazon.com>
Co-authored-by: knoxy5467 <knoxy5467@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     </distributionManagement>
 
     <modules>
+        <module>lz4-shim</module>
         <module>build-tools</module>
         <module>common</module>
         <module>serializer-deserializer</module>
@@ -118,6 +119,7 @@
         <protobuf.java.version>3.25.5</protobuf.java.version>
         <localstack.utils>0.2.23</localstack.utils>
         <aws.msk.iam.auth>2.0.3</aws.msk.iam.auth>
+        <lz4.java.version>1.10.2</lz4.java.version>
     </properties>
 
     <dependencyManagement>
@@ -177,6 +179,8 @@
                   </exclusion>
                </exclusions>
             </dependency>
+            <!-- Exclude commons-compress globally due to vulns -->
+
             <dependency>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro-maven-plugin</artifactId>
@@ -369,6 +373,12 @@
                 <artifactId>json</artifactId>
                 <version>20231013</version>
             </dependency>
+            <!-- Override vulnerable lz4-java with secure shim -->
+            <dependency>
+                <groupId>org.lz4</groupId>
+                <artifactId>lz4-java</artifactId>
+                <version>${lz4.java.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -503,6 +513,9 @@
                                         <exclude>org.apache.avro</exclude>
                                         <exclude>metadata</exclude>
                                         <exclude>additionalTypes</exclude>
+                                        <!-- Exclude lz4-shim module from coverage -->
+                                        <exclude>org.lz4</exclude>
+                                        <exclude>default</exclude>
                                     </excludes>
                                 </rule>
                             </rules>
